--- a/to_do_app/templates/base.html
+++ b/to_do_app/templates/base.html
@@ -13,18 +13,21 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 
 <body>
 
-  <h1>The Simple To-Do-App</h1>
-
+  <div class="container-fluid">
+    <br>
+    <h1>The Simple To-Do-App</h1>
+  </div>
 
 
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Simple To Do App</a>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -40,17 +43,22 @@
 
 
         </ul>
-        <form class="form-inline my-2 my-lg-0" method="POST" action="{% url 'to-dos:create' %}">>
+        <form class="d-flex" method="POST" action="{% url 'to-dos:create' %}">>
+
           {% csrf_token %}
           {{ form.as_p }}
-          
-          <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Add To List</button>
+
+          <button class="btn btn-outline-success btn-sm" type="submit">Add To List</button>
         </form>
+
+
 
 
       </div>
     </div>
   </nav>
+
+  <br>
 
   {% block content %}
 
