--- a/to_do_app/to_dos/templates/to_dos/to_do_list.html
+++ b/to_do_app/to_dos/templates/to_dos/to_do_list.html
@@ -3,26 +3,75 @@
 {% load static %}
 
 <div class="container">
-    <h3>Here is a List of all your Todos</h3>
+	<h3>Still To Do</h3>
 
-    {% if AllToDos %}
-	<table class="table table-bordered">
+	{% if AllToDos %}
+
+
+	<table class="table table-dark table-striped">
+
 		{% for to_do in AllToDos %}
-			{% if to_do.is_done %}
-				<tr class="table-secondary">
-					<td class="striker"><a href="{% url 'to-dos:update' pk=to_do.pk %}">{{ to_do.name }}</a></td> 
-					<td><center><a href="{% url 'to-dos:uncross' to_do.id %}">Uncross</a></center></td>
-					<td><center><a href="{% url 'to-dos:delete' pk=to_do.pk %}">Delete</a></center></td>
-				</tr>
-			{% else %}
-				<tr>
-					<td><a href="{% url 'to-dos:update' pk=to_do.pk %}">{{ to_do.name }}</a></td> 
-					<td><center><a href="{% url 'to-dos:cross_off' to_do.id %}">Cross Off</a></center></td>
-					<td><center><a href="{% url 'to-dos:delete' pk=to_do.pk %}">Delete</a></center></td>
-				</tr>
-			{% endif %}
+		{% if not to_do.is_done %}
+
+
+
+		<tr>
+			<td><a href="{% url 'to-dos:update' pk=to_do.pk %}">{{ to_do.name }}</a></td>
+			<td>
+				<center><a href="{% url 'to-dos:cross_off' to_do.id %}"><svg xmlns="http://www.w3.org/2000/svg"
+							width="16" height="16" fill="currentColor" class="bi bi-check2-square" viewBox="0 0 16 16">
+							<path
+								d="M3 14.5A1.5 1.5 0 0 1 1.5 13V3A1.5 1.5 0 0 1 3 1.5h8a.5.5 0 0 1 0 1H3a.5.5 0 0 0-.5.5v10a.5.5 0 0 0 .5.5h10a.5.5 0 0 0 .5-.5V8a.5.5 0 0 1 1 0v5a1.5 1.5 0 0 1-1.5 1.5H3z" />
+							<path
+								d="m8.354 10.354 7-7a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z" />
+						</svg></a></center>
+			</td>
+			<td>
+				<center><a href="{% url 'to-dos:delete' pk=to_do.pk %}"><svg xmlns="http://www.w3.org/2000/svg"
+							width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+							<path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+							<path
+								d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+						</svg></a></center>
+			</td>
+		</tr>
+		{% endif %}
+		{% endfor %}
+
+
+	</table>
+
+
+
+
+	<h3>Already Done!!!</h3>
+	<table class="table table-success table-striped">
+		{% for to_do in AllToDos %}
+		{% if to_do.is_done %}
+		<tr class="table-secondary">
+			<td class="striker"><a href="{% url 'to-dos:update' pk=to_do.pk %}">{{ to_do.name }}</a></td>
+			<td>
+				<center><a href="{% url 'to-dos:uncross' to_do.id %}"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+							height="16" fill="currentColor" class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
+							<path fill-rule="evenodd"
+								d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z" />
+							<path
+								d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z" />
+						</svg></a></center>
+			</td>
+			<td>
+				<center><a href="{% url 'to-dos:delete' pk=to_do.pk %}"><svg xmlns="http://www.w3.org/2000/svg"
+							width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+							<path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+							<path
+								d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+						</svg></a></center>
+			</td>
+		</tr>
+		{% endif %}
 		{% endfor %}
 	</table>
+
 	{% endif %}
 
 
@@ -32,3 +81,32 @@
 
 
 {% endblock %}
+
+
+{% comment %} {% if AllToDos %}
+<table class="table table-bordered">
+	{% for to_do in AllToDos %}
+	{% if to_do.is_done %}
+	<tr class="table-secondary">
+		<td class="striker"><a href="{% url 'to-dos:update' pk=to_do.pk %}">{{ to_do.name }}</a></td>
+		<td>
+			<center><a href="{% url 'to-dos:uncross' to_do.id %}">Uncross</a></center>
+		</td>
+		<td>
+			<center><a href="{% url 'to-dos:delete' pk=to_do.pk %}">Delete</a></center>
+		</td>
+	</tr>
+	{% else %}
+	<tr>
+		<td><a href="{% url 'to-dos:update' pk=to_do.pk %}">{{ to_do.name }}</a></td>
+		<td>
+			<center><a href="{% url 'to-dos:cross_off' to_do.id %}">Cross Off</a></center>
+		</td>
+		<td>
+			<center><a href="{% url 'to-dos:delete' pk=to_do.pk %}">Delete</a></center>
+		</td>
+	</tr>
+	{% endif %}
+	{% endfor %}
+</table>
+{% endif %} {% endcomment %}
